--- a/plugin.xml
+++ b/plugin.xml
@@ -1,19 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    xmlns:rim="http://www.blackberry.com/ns/widgets"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     id="cordova-plugin-dz-settingspage"
     version="1.0.0">
 	<name>SettingsPage</name>
 	<description>Cordova Phaser.io Settings Page Plugin</description>
 	<license>Apache 2.0</license>
-	<keywords>cordova,plugin,phaser.io,cordova-android,cordova-ios,cordova-browser,settings</keywords>
+	<keywords>cordova,plugin,phaser,cordova-android,cordova-ios,cordova-browser,settings</keywords>
 
 	<engines>
 		<engine name="cordova" version=">=3.0.0" />
 	</engines>
 
 	<js-module src="www/settingsPage.js" name="settingsPage">
-		<clobbers target="settingsPage" />
+		<runs/>
 	</js-module>
 </plugin>
